尝试改右上角的图标，成功找到

--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -64,6 +64,13 @@
                   </a>
                 </li>
               {% endif %}
+              {% if site.author.weibo %}
+                <li>
+                  <a href="http://weibo.com/{{ site.author.weibo }}" class="zocial weibo icon" target="_blank">
+                    <span class="hidden-desktop">weibo</span>
+                  </a>
+                </li>
+              {% endif %}
               {% if site.author.googleplus %}
                 <li>
                   <a href="https://plus.google.com/{{ site.author.googleplus }}" class="zocial googleplus icon" target="_blank">
