--- a/_includes/themes/hooligan/post.html
+++ b/_includes/themes/hooligan/post.html
@@ -30,12 +30,12 @@
   
   <div class="span4">
     <section>
-      <h4>Published</h4>
+      <h4>写作时间</h4>
       <div class="date"><span>{{ page.date | date_to_long_string }}</span></div>
     </section>
     {% if page.category %}
       <section>
-        <h4>Category</h4>
+        <h4>分类</h4>
         <span class="category">
           {{ page.category }}
         </span>
@@ -43,7 +43,7 @@
     {% endif %}     
     {% unless page.tags == empty %}
       <section>
-        <h4>Tags</h4>
+        <h4>标签</h4>
         <ul class="tag_box">
           {% assign tags_list = page.tags %}
           {% include JB/tags_list %}
